--- a/config/sync/core.entity_form_display.node.page.default.yml
+++ b/config/sync/core.entity_form_display.node.page.default.yml
@@ -27,7 +27,7 @@ third_party_settings:
     group_banner:
       children:
         - title
-        - field_vih_banner
+        - field_vih_top_banner
       parent_name: ''
       weight: 0
       format_type: tab
@@ -138,7 +138,7 @@ content:
     region: content
   field_vih_top_banner:
     type: entity_browser_entity_reference
-    weight: 2
+    weight: 29
     settings:
       entity_browser: media_browser
       field_widget_display: rendered_entity
