--- a/config/sync/core.entity_view_display.node.event.default.yml
+++ b/config/sync/core.entity_view_display.node.event.default.yml
@@ -42,19 +42,19 @@ content:
   body:
     label: hidden
     type: text_default
-    weight: 2
+    weight: 1
     settings: {  }
     third_party_settings: {  }
     region: content
   field_metatag:
-    weight: 15
+    weight: 14
     label: above
     settings: {  }
     third_party_settings: {  }
     type: metatag_empty_formatter
     region: content
   field_vih_cource_contact_person:
-    weight: 9
+    weight: 8
     label: hidden
     settings:
       view_mode: compact
@@ -63,7 +63,7 @@ content:
     type: entity_reference_entity_view
     region: content
   field_vih_course_heading:
-    weight: 10
+    weight: 9
     label: hidden
     settings:
       link_to_entity: false
@@ -71,7 +71,7 @@ content:
     type: string
     region: content
   field_vih_course_subheading:
-    weight: 11
+    weight: 10
     label: hidden
     settings:
       link_to_entity: false
@@ -80,7 +80,7 @@ content:
     region: content
   field_vih_event_end_date:
     type: datetime_default
-    weight: 6
+    weight: 5
     region: content
     label: hidden
     settings:
@@ -88,7 +88,7 @@ content:
       format_type: medium_datetime
     third_party_settings: {  }
   field_vih_event_persons_limit:
-    weight: 4
+    weight: 3
     label: hidden
     settings:
       thousand_separator: ''
@@ -98,7 +98,7 @@ content:
     region: content
   field_vih_event_price:
     type: number_decimal
-    weight: 7
+    weight: 6
     region: content
     label: hidden
     settings:
@@ -109,7 +109,7 @@ content:
     third_party_settings: {  }
   field_vih_event_start_date:
     type: datetime_default
-    weight: 5
+    weight: 4
     region: content
     label: hidden
     settings:
@@ -117,7 +117,7 @@ content:
       format_type: medium_datetime
     third_party_settings: {  }
   field_vih_event_status:
-    weight: 12
+    weight: 11
     label: hidden
     settings: {  }
     third_party_settings: {  }
@@ -125,7 +125,7 @@ content:
     region: content
   field_vih_image:
     type: image
-    weight: 1
+    weight: 0
     region: content
     label: hidden
     settings:
@@ -133,7 +133,7 @@ content:
       image_link: ''
     third_party_settings: {  }
   field_vih_paragraphs:
-    weight: 8
+    weight: 7
     label: hidden
     settings:
       view_mode: default
@@ -142,20 +142,20 @@ content:
     type: entity_reference_revisions_entity_view
     region: content
   field_vih_top_banner:
-    weight: 16
-    label: above
+    weight: 13
+    label: hidden
     settings:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
     region: content
   links:
-    weight: 3
+    weight: 2
     region: content
     settings: {  }
     third_party_settings: {  }
   scheduled_update:
-    weight: 13
+    weight: 12
     label: hidden
     settings:
       link: true
