--- a/config/sync/core.entity_view_display.node.news.default.yml
+++ b/config/sync/core.entity_view_display.node.news.default.yml
@@ -38,7 +38,7 @@ content:
     third_party_settings: {  }
     region: content
   field_metatag:
-    weight: 7
+    weight: 6
     label: above
     settings: {  }
     third_party_settings: {  }
@@ -55,14 +55,14 @@ content:
     region: content
   field_vih_news_tags:
     type: entity_reference_label
-    weight: 4
+    weight: 3
     region: content
     label: hidden
     settings:
       link: true
     third_party_settings: {  }
   field_vih_paragraphs:
-    weight: 5
+    weight: 4
     label: hidden
     settings:
       view_mode: default
@@ -71,12 +71,13 @@ content:
     type: entity_reference_revisions_entity_view
     region: content
   field_vih_top_banner:
-    weight: 8
-    label: above
+    weight: 5
+    label: hidden
     settings:
       link: true
+      view_mode: default
     third_party_settings: {  }
-    type: entity_reference_label
+    type: entity_reference_entity_view
     region: content
   links:
     weight: 0
