--- a/config/sync/core.entity_view_display.node.vih_long_course_order.email_teaser.yml
+++ b/config/sync/core.entity_view_display.node.vih_long_course_order.email_teaser.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.node.vih_long_course_order.field_vih_lco_adult_email
     - field.field.node.vih_long_course_order.field_vih_lco_adult_first_name
     - field.field.node.vih_long_course_order.field_vih_lco_adult_last_name
+    - field.field.node.vih_long_course_order.field_vih_lco_adult_municipality
     - field.field.node.vih_long_course_order.field_vih_lco_adult_nationality
     - field.field.node.vih_long_course_order.field_vih_lco_adult_telefon
     - field.field.node.vih_long_course_order.field_vih_lco_adult_zip
@@ -23,6 +24,7 @@ dependencies:
     - field.field.node.vih_long_course_order.field_vih_lco_found_from
     - field.field.node.vih_long_course_order.field_vih_lco_last_name
     - field.field.node.vih_long_course_order.field_vih_lco_message
+    - field.field.node.vih_long_course_order.field_vih_lco_municipality
     - field.field.node.vih_long_course_order.field_vih_lco_nationality
     - field.field.node.vih_long_course_order.field_vih_lco_newsletter
     - field.field.node.vih_long_course_order.field_vih_lco_order_course_perio
@@ -63,7 +65,7 @@ content:
     type: string
     region: content
   field_vih_lco_adult_address:
-    weight: 20
+    weight: 22
     label: above
     settings:
       link_to_entity: false
@@ -71,7 +73,7 @@ content:
     type: string
     region: content
   field_vih_lco_adult_city:
-    weight: 19
+    weight: 20
     label: above
     settings:
       link_to_entity: false
@@ -79,7 +81,7 @@ content:
     type: string
     region: content
   field_vih_lco_adult_email:
-    weight: 12
+    weight: 13
     label: above
     settings:
       link_to_entity: false
@@ -87,14 +89,6 @@ content:
     type: string
     region: content
   field_vih_lco_adult_first_name:
-    weight: 8
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-  field_vih_lco_adult_last_name:
     weight: 9
     label: above
     settings:
@@ -102,15 +96,23 @@ content:
     third_party_settings: {  }
     type: string
     region: content
-  field_vih_lco_adult_nationality:
-    weight: 17
+  field_vih_lco_adult_last_name:
+    weight: 10
     label: above
     settings:
       link_to_entity: false
     third_party_settings: {  }
     type: string
     region: content
-  field_vih_lco_adult_telefon:
+  field_vih_lco_adult_municipality:
+    type: string
+    weight: 21
+    region: content
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+  field_vih_lco_adult_nationality:
     weight: 18
     label: above
     settings:
@@ -118,8 +120,16 @@ content:
     third_party_settings: {  }
     type: string
     region: content
+  field_vih_lco_adult_telefon:
+    weight: 19
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_vih_lco_adult_zip:
-    weight: 14
+    weight: 15
     label: above
     settings:
       link_to_entity: false
@@ -143,7 +153,7 @@ content:
     type: entity_reference_label
     region: content
   field_vih_lco_education:
-    weight: 10
+    weight: 11
     label: above
     settings:
       link_to_entity: false
@@ -167,7 +177,7 @@ content:
     type: string
     region: content
   field_vih_lco_found_from:
-    weight: 23
+    weight: 25
     label: above
     settings:
       link_to_entity: false
@@ -183,14 +193,22 @@ content:
     type: string
     region: content
   field_vih_lco_message:
-    weight: 22
+    weight: 24
     label: above
     settings: {  }
     third_party_settings: {  }
     type: basic_string
     region: content
+  field_vih_lco_municipality:
+    type: string
+    weight: 8
+    region: content
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
   field_vih_lco_nationality:
-    weight: 13
+    weight: 14
     label: above
     settings:
       link_to_entity: false
@@ -198,7 +216,7 @@ content:
     type: string
     region: content
   field_vih_lco_newsletter:
-    weight: 16
+    weight: 17
     label: above
     settings:
       format: default
@@ -209,15 +227,15 @@ content:
     region: content
   field_vih_lco_order_course_perio:
     type: entity_reference_revisions_entity_view
-    weight: 15
+    weight: 16
     region: content
     label: hidden
     settings:
-      view_mode: email_teaser
+      view_mode: embedded
       link: ''
     third_party_settings: {  }
   field_vih_lco_payment:
-    weight: 21
+    weight: 23
     label: above
     settings:
       link_to_entity: false
@@ -225,7 +243,7 @@ content:
     type: string
     region: content
   field_vih_lco_telefon:
-    weight: 11
+    weight: 12
     label: above
     settings:
       link_to_entity: false
