VI-206 Because of site reinstall issue we don't change this files

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,7 @@ private
 # Files that might appear on external disks
 .Spotlight-V100
 .Trashes
+
+#Because of site reinstall issue VI-206 we don't change this files
+/config/sync/field.storage.node.body.yml
+/config/sync/field.storage.node.panelizer.yml
