--- a/config/sync/field.field.node.vih_long_course_order.field_vih_lco_adult_zip.yml
+++ b/config/sync/field.field.node.vih_long_course_order.field_vih_lco_adult_zip.yml
@@ -9,7 +9,7 @@ id: node.vih_long_course_order.field_vih_lco_adult_zip
 field_name: field_vih_lco_adult_zip
 entity_type: node
 bundle: vih_long_course_order
-label: 'Adult zip'
+label: ZIP
 description: ''
 required: false
 translatable: false
