--- a/config/sync/field.field.node.vih_long_course_order.field_vih_lco_adult_email.yml
+++ b/config/sync/field.field.node.vih_long_course_order.field_vih_lco_adult_email.yml
@@ -9,7 +9,7 @@ id: node.vih_long_course_order.field_vih_lco_adult_email
 field_name: field_vih_lco_adult_email
 entity_type: node
 bundle: vih_long_course_order
-label: 'Adult email'
+label: Email
 description: ''
 required: false
 translatable: false
