--- a/config/sync/field.field.node.vih_long_course_order.field_vih_lco_adult_telefon.yml
+++ b/config/sync/field.field.node.vih_long_course_order.field_vih_lco_adult_telefon.yml
@@ -9,7 +9,7 @@ id: node.vih_long_course_order.field_vih_lco_adult_telefon
 field_name: field_vih_lco_adult_telefon
 entity_type: node
 bundle: vih_long_course_order
-label: 'Adult telefon'
+label: Telefon
 description: ''
 required: false
 translatable: false
