--- a/docroot/modules/custom/vih_subscription/vih_subscription.links.menu.yml
+++ b/docroot/modules/custom/vih_subscription/vih_subscription.links.menu.yml
@@ -1,4 +1,10 @@
 # Define default links for this module.
+vih_subsciption.terms_and_conditions.settings:
+  title: 'VIH Subscription Terms and Conditions settings'
+  description: 'Orders "terms and conditions" settings'
+  route_name: vih_subscription.admin.terms_and_conditions.settings_form
+  parent: system.admin_config_system
+  weight: 98
 vih_subsciption.notifications.settings:
   title: 'VIH Subscription Notification settings'
   description: 'Provide custom email text for notifications about course/event subscription'
