--- a/docroot/modules/custom/vih_subscription/vih_subscription.routing.yml
+++ b/docroot/modules/custom/vih_subscription/vih_subscription.routing.yml
@@ -114,3 +114,12 @@ vih_subscription.admin.edbbrugsen.settings_form:
     _permission: 'access administration pages'
   options:
     _admin_route: TRUE
+vih_subscription.admin.terms_and_conditions.settings_form:
+  path: '/admin/config/vih_subscription/terms_and_conditions/settings'
+  defaults:
+    _form: '\Drupal\vih_subscription\Form\TermsAndConditionsSettingsForm'
+    _title: 'VIH Subscription Terms and Conditions settings'
+  requirements:
+    _permission: 'access administration pages'
+  options:
+    _admin_route: TRUE
