VI-222 added contact person newsletter

--- a/config/sync/core.entity_view_display.node.vih_long_course_order.default.yml
+++ b/config/sync/core.entity_view_display.node.vih_long_course_order.default.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.field.node.vih_long_course_order.field_vih_lco_adult_last_name
     - field.field.node.vih_long_course_order.field_vih_lco_adult_municipality
     - field.field.node.vih_long_course_order.field_vih_lco_adult_nationality
+    - field.field.node.vih_long_course_order.field_vih_lco_adult_newsletter
     - field.field.node.vih_long_course_order.field_vih_lco_adult_telefon
     - field.field.node.vih_long_course_order.field_vih_lco_adult_zip
     - field.field.node.vih_long_course_order.field_vih_lco_city
@@ -110,6 +111,16 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
+  field_vih_lco_adult_newsletter:
+    weight: 27
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
     region: content
   field_vih_lco_adult_telefon:
     weight: 18
