--- a/config/sync/core.entity_view_display.node.vih_long_course_order.teaser.yml
+++ b/config/sync/core.entity_view_display.node.vih_long_course_order.teaser.yml
@@ -13,6 +13,7 @@ dependencies:
     - field.field.node.vih_long_course_order.field_vih_lco_adult_last_name
     - field.field.node.vih_long_course_order.field_vih_lco_adult_municipality
     - field.field.node.vih_long_course_order.field_vih_lco_adult_nationality
+    - field.field.node.vih_long_course_order.field_vih_lco_adult_newsletter
     - field.field.node.vih_long_course_order.field_vih_lco_adult_telefon
     - field.field.node.vih_long_course_order.field_vih_lco_adult_zip
     - field.field.node.vih_long_course_order.field_vih_lco_city
@@ -119,6 +120,16 @@ content:
     label: hidden
     settings:
       link_to_entity: false
+    third_party_settings: {  }
+  field_vih_lco_adult_newsletter:
+    type: boolean
+    weight: 27
+    region: content
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
     third_party_settings: {  }
   field_vih_lco_adult_telefon:
     type: string
