--- a/config/sync/core.entity_form_display.node.vih_long_course_order.default.yml
+++ b/config/sync/core.entity_form_display.node.vih_long_course_order.default.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.field.node.vih_long_course_order.field_vih_lco_adult_last_name
     - field.field.node.vih_long_course_order.field_vih_lco_adult_municipality
     - field.field.node.vih_long_course_order.field_vih_lco_adult_nationality
+    - field.field.node.vih_long_course_order.field_vih_lco_adult_newsletter
     - field.field.node.vih_long_course_order.field_vih_lco_adult_telefon
     - field.field.node.vih_long_course_order.field_vih_lco_adult_zip
     - field.field.node.vih_long_course_order.field_vih_lco_city
@@ -44,7 +45,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 31
+    weight: 7
     settings:
       rows: 9
       summary_rows: 3
@@ -53,12 +54,12 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 3
     settings: {  }
     third_party_settings: {  }
     region: content
   field_vih_lco_address:
-    weight: 39
+    weight: 15
     settings:
       size: 60
       placeholder: ''
@@ -66,7 +67,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_adult_address:
-    weight: 52
+    weight: 29
     settings:
       size: 60
       placeholder: ''
@@ -74,7 +75,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_adult_city:
-    weight: 53
+    weight: 30
     settings:
       size: 60
       placeholder: ''
@@ -82,7 +83,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_adult_email:
-    weight: 51
+    weight: 28
     settings:
       size: 60
       placeholder: ''
@@ -90,7 +91,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_adult_first_name:
-    weight: 48
+    weight: 25
     settings:
       size: 60
       placeholder: ''
@@ -98,7 +99,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_adult_last_name:
-    weight: 49
+    weight: 26
     settings:
       size: 60
       placeholder: ''
@@ -106,7 +107,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_adult_municipality:
-    weight: 123
+    weight: 35
     settings:
       size: 60
       placeholder: ''
@@ -114,15 +115,22 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_adult_nationality:
-    weight: 55
+    weight: 32
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_vih_lco_adult_newsletter:
+    weight: 36
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
   field_vih_lco_adult_telefon:
-    weight: 50
+    weight: 27
     settings:
       size: 60
       placeholder: ''
@@ -130,7 +138,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_adult_zip:
-    weight: 54
+    weight: 31
     settings:
       size: 60
       placeholder: ''
@@ -138,7 +146,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_city:
-    weight: 40
+    weight: 16
     settings:
       size: 60
       placeholder: ''
@@ -146,7 +154,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_course:
-    weight: 32
+    weight: 8
     settings:
       match_operator: CONTAINS
       size: 60
@@ -155,7 +163,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_vih_lco_cpr:
-    weight: 36
+    weight: 12
     settings:
       size: 60
       placeholder: ''
@@ -163,7 +171,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_education:
-    weight: 42
+    weight: 19
     settings:
       size: 60
       placeholder: ''
@@ -171,7 +179,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_email:
-    weight: 46
+    weight: 23
     settings:
       size: 60
       placeholder: ''
@@ -179,7 +187,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_first_name:
-    weight: 34
+    weight: 10
     settings:
       size: 60
       placeholder: ''
@@ -187,7 +195,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_found_from:
-    weight: 44
+    weight: 21
     settings:
       size: 60
       placeholder: ''
@@ -195,7 +203,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_last_name:
-    weight: 35
+    weight: 11
     settings:
       size: 60
       placeholder: ''
@@ -203,7 +211,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_message:
-    weight: 45
+    weight: 22
     settings:
       rows: 5
       placeholder: ''
@@ -211,7 +219,7 @@ content:
     type: string_textarea
     region: content
   field_vih_lco_municipality:
-    weight: 124
+    weight: 17
     settings:
       size: 60
       placeholder: ''
@@ -219,7 +227,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_nationality:
-    weight: 38
+    weight: 14
     settings:
       size: 60
       placeholder: ''
@@ -227,7 +235,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_newsletter:
-    weight: 47
+    weight: 24
     settings:
       display_label: true
     third_party_settings: {  }
@@ -235,7 +243,7 @@ content:
     region: content
   field_vih_lco_order_course_perio:
     type: entity_reference_paragraphs
-    weight: 33
+    weight: 9
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -246,7 +254,7 @@ content:
     third_party_settings: {  }
     region: content
   field_vih_lco_payment:
-    weight: 43
+    weight: 20
     settings:
       size: 60
       placeholder: ''
@@ -254,13 +262,13 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_status:
-    weight: 121
+    weight: 33
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_vih_lco_telefon:
-    weight: 37
+    weight: 13
     settings:
       size: 60
       placeholder: ''
@@ -268,7 +276,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_zip:
-    weight: 41
+    weight: 18
     settings:
       size: 60
       placeholder: ''
@@ -277,14 +285,14 @@ content:
     region: content
   langcode:
     type: language_select
-    weight: 2
+    weight: 1
     settings:
       include_locked: true
     third_party_settings: {  }
     region: content
   path:
     type: path
-    weight: 30
+    weight: 6
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -292,26 +300,26 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
+    weight: 4
     third_party_settings: {  }
     region: content
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 122
+    weight: 34
     third_party_settings: {  }
     region: content
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 16
+    weight: 5
     third_party_settings: {  }
     region: content
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     settings:
       size: 60
       placeholder: ''
@@ -319,7 +327,7 @@ content:
     region: content
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 2
     settings:
       match_operator: CONTAINS
       size: 60
