--- a/config/sync/core.entity_view_display.user.user.default.yml
+++ b/config/sync/core.entity_view_display.user.user.default.yml
@@ -19,7 +19,6 @@ dependencies:
     - field.field.user.user.field_vih_user_type_id
     - image.style.vih_person_teaser
   module:
-    - datetime
     - entity_reference_revisions
     - image
     - panelizer
@@ -38,33 +37,24 @@ mode: default
 content:
   field_vih_banner:
     type: image
-    weight: 9
+    weight: 8
     region: content
-    label: above
+    label: hidden
     settings:
       image_style: ''
       image_link: ''
     third_party_settings: {  }
   field_vih_top_banner:
-    weight: 13
-    label: above
+    weight: 10
+    label: hidden
     settings:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
     region: content
-  field_vih_user_birthday:
-    type: datetime_default
-    weight: 6
-    region: content
-    label: above
-    settings:
-      timezone_override: ''
-      format_type: vih_medium_date_short_month
-    third_party_settings: {  }
   field_vih_user_descr:
     weight: 4
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
@@ -78,9 +68,9 @@ content:
     third_party_settings: {  }
   field_vih_user_job_title:
     type: string
-    weight: 10
+    weight: 9
     region: content
-    label: above
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
@@ -88,7 +78,7 @@ content:
     type: string
     weight: 2
     region: content
-    label: above
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
@@ -96,13 +86,13 @@ content:
     type: string
     weight: 3
     region: content
-    label: above
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
   field_vih_user_paragraphs:
     type: entity_reference_revisions_entity_view
-    weight: 8
+    weight: 7
     region: content
     label: above
     settings:
@@ -111,7 +101,7 @@ content:
     third_party_settings: {  }
   field_vih_user_phone:
     type: string
-    weight: 7
+    weight: 6
     region: content
     label: above
     settings:
@@ -134,15 +124,9 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-  field_vih_user_type_id:
-    type: entity_reference_label
-    weight: 12
-    region: content
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
 hidden:
+  field_vih_user_birthday: true
   field_vih_user_kvalifikationer: true
+  field_vih_user_type_id: true
   langcode: true
   member_for: true
