--- a/config/sync/core.entity_view_display.user.user.compact.yml
+++ b/config/sync/core.entity_view_display.user.user.compact.yml
@@ -5,11 +5,11 @@ dependencies:
   config:
     - core.entity_view_mode.user.compact
     - field.field.user.user.field_vih_banner
+    - field.field.user.user.field_vih_top_banner
     - field.field.user.user.field_vih_user_birthday
     - field.field.user.user.field_vih_user_descr
     - field.field.user.user.field_vih_user_email
     - field.field.user.user.field_vih_user_job_title
-    - field.field.user.user.field_vih_user_kvalifikationer
     - field.field.user.user.field_vih_user_name_first
     - field.field.user.user.field_vih_user_name_last
     - field.field.user.user.field_vih_user_paragraphs
@@ -86,10 +86,10 @@ content:
 hidden:
   field_banner: true
   field_vih_banner: true
+  field_vih_top_banner: true
   field_vih_user_birthday: true
   field_vih_user_email: true
   field_vih_user_job_title: true
-  field_vih_user_kvalifikationer: true
   field_vih_user_paragraphs: true
   field_vih_user_type_id: true
   langcode: true
