--- a/config/sync/core.entity_view_display.user.user.teaser.yml
+++ b/config/sync/core.entity_view_display.user.user.teaser.yml
@@ -5,11 +5,11 @@ dependencies:
   config:
     - core.entity_view_mode.user.teaser
     - field.field.user.user.field_vih_banner
+    - field.field.user.user.field_vih_top_banner
     - field.field.user.user.field_vih_user_birthday
     - field.field.user.user.field_vih_user_descr
     - field.field.user.user.field_vih_user_email
     - field.field.user.user.field_vih_user_job_title
-    - field.field.user.user.field_vih_user_kvalifikationer
     - field.field.user.user.field_vih_user_name_first
     - field.field.user.user.field_vih_user_name_last
     - field.field.user.user.field_vih_user_paragraphs
@@ -83,9 +83,9 @@ content:
     third_party_settings: {  }
 hidden:
   field_vih_banner: true
+  field_vih_top_banner: true
   field_vih_user_birthday: true
   field_vih_user_descr: true
-  field_vih_user_kvalifikationer: true
   field_vih_user_paragraphs: true
   field_vih_user_title: true
   field_vih_user_type_id: true
