--- a/config/sync/core.entity_form_display.taxonomy_term.vih_class_package.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.vih_class_package.default.yml
@@ -30,6 +30,7 @@ third_party_settings:
       children:
         - name
         - description
+        - field_short_description
         - field_vih_link_taxo
         - field_vih_cp_image
         - field_vih_class_package_color
@@ -111,7 +112,7 @@ content:
     type: metatag_firehose
     region: content
   field_short_description:
-    weight: 22
+    weight: 15
     settings:
       rows: 5
       placeholder: ''
