--- a/docroot/modules/custom/vih_subscription/vih_subscription.routing.yml
+++ b/docroot/modules/custom/vih_subscription/vih_subscription.routing.yml
@@ -123,3 +123,12 @@ vih_subscription.admin.terms_and_conditions.settings_form:
     _permission: 'access administration pages'
   options:
     _admin_route: TRUE
+vih_subscription.admin.redirection_pages.settings_form:
+  path: '/admin/config/vih_subscription/redirection_pages/settings'
+  defaults:
+    _form: '\Drupal\vih_subscription\Form\RedirectionPagesSettingsForm'
+    _title: 'VIH redirection pages settings'
+  requirements:
+    _permission: 'access administration pages'
+  options:
+    _admin_route: TRUE
